# jax-morpho

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: DESIGN.md  ENVIRONMENT.md  RELEASING.md
examples/: demo_center_based.py  demo_genome.py  demo_gpu_scaling.py  demo_inverse_design.py  demo_mu_fig3c.py  demo_mu_sensitivity.py  demo_phase1_gate.py  demo_phase2_gate.py  demo_phase3_gate.py  demo_phase4_gate.py  demo_scale.py
src/jax_morpho/: __init__.py  campaign.py  center_based.py  farm_config.py  genome.py  inverse_design.py  runfns.py  runs.py  scale.py  stats.py
src/jax_morpho/evodevo/: __init__.py  evolution.py  fixed_point.py  genetics.py  genome_map.py  mechanical.py  phenotype.py  pipeline.py  quantgen.py  reference_mu.py  response.py  sensitivity.py
tests/: test_campaign_cli.py  test_campaign_smoke.py  test_center_based.py  test_evodevo_api.py  test_evolution.py  test_farm_config_goldens.py  test_farm_conformance.py  test_fixed_point.py  test_genome.py  test_inverse_design.py  test_phenotype.py  test_quantgen.py  test_reference_mu.py  test_response.py  test_run_config_goldens.py  test_scale.py  test_sensitivity.py
