[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jax-morpho"
version = "0.2.0"
description = "Differentiable, GPU-scale developmental morphogenesis in JAX: a center-based tissue engine that reproduces real-epithelium statistics, scales to millions of cells, and maps an evolvable genome to form."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "James P. Galasyn" },
  { name = "Claude Théodore" },
]
keywords = [
  "morphogenesis", "developmental-biology", "tissue-mechanics",
  "center-based-model", "epithelium", "differentiable-simulation",
  "inverse-design", "jax", "gpu",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Artificial Life",
]
dependencies = [
  # Plain jax = CPU by default (portable, clean CI). GPU users install the
  # CUDA build alongside:  pip install 'jax[cuda12]'
  "jax>=0.10",
  "numpy>=1.24",
  "scipy>=1.10",
  # The campaign / GPU-farming layer, extracted from jax-solitons at rule-of-three
  # (2026-07): config-hashed registry, restart-exact checkpoints, spot-fleet
  # executors, cloud brokers, and an ENFORCED dollar cap. jax_morpho.runs.RunConfig
  # structurally satisfies run_farm.RunConfig; the physics crosses the boundary as
  # runfns:evodevo_run (an evolve lineage or the M-U known-answer gate).
  # HARD (not optional) dependency by design: runs.py re-exports run-farm's
  # checkpoint helpers (save/load_checkpoint, run_dir), the restartable-run contract
  # DESIGN.md §5b leans on even for a single local lineage. run-farm's base deps are
  # only jax + numpy (both already required above; the cloud SDKs live behind its own
  # `modal`/`s3` extras), so the engine-only user pulls zero net-new transitive deps.
  "run-farm>=0.1.1",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=4",
  "pytest-xdist>=3",        # parallel test execution (pytest -n auto)
  "jax-md>=0.2",            # exercises the neighbor-list scaling tests in CI
]
# Cell-list scaling (jax_morpho.scale). Heavy transitive tree; install only
# when you need O(N) relaxation toward 10^5-10^6 cells: pip install '.[scale]'
scale = ["jax-md>=0.2"]
# Cloud executors for a real fleet campaign (run_farm's own extras): the Modal
# serverless executor and the S3 object-store registry/sink backend. The Vast and
# RunPod brokers are stdlib-only and need no extra. Install to point a campaign at
# rented hardware:  pip install '.[fleet]'
fleet = ["run-farm[modal,s3]>=0.1.1"]

[project.scripts]
# Plan / cost / launch an evodevo fleet campaign (run-farm consumer).
jax-morpho-campaign = "jax_morpho.campaign:main"

[project.urls]
Homepage = "https://github.com/JimGalasyn/jax-morpho"
Issues = "https://github.com/JimGalasyn/jax-morpho/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jax_morpho"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["jax_morpho"]
omit = ["*/examples/*"]

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "def __repr__",
]
